[Feat] Home Page
Home Page
Mobile responsive

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Link to ui screens</h1>
     <a href="/UI_pages/login.html">Login</a><br>
-    <a href="/UI_pages/signup.html">signup</a>
+    <a href="/UI_pages/signup.html">signup</a><br>
+    <a href="/UI_pages/homepage.html">Home Page</a>
 </body>
 </html>
