[Feat] Product listing Page
Product Listing page
responsive Product cards
responsive navbar
responsive filter section

--- a/UI_pages/homepage.html
+++ b/UI_pages/homepage.html
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <div class="page-container">
+        <div class="home-page-container">
             <div class="banner">
                 <div class="banner-logo-text">
                     <p class="banner-title">AyuMall</p>
