--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Link to ui screens</h1>
     <a href="/UI_pages/login.html">Login</a><br>
     <a href="/UI_pages/signup.html">signup</a><br>
-    <a href="/UI_pages/homepage.html">Home Page</a>
+    <a href="/UI_pages/homepage.html">Home Page</a><br>
+    <a href="/UI_pages/productpage.html">Product Page</a>
 </body>
 </html>
