[Feat] Wishlist page
Wishlist Page
responsive nav
responsive product cards

some minor previous css changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="/UI_pages/login.html">Login</a><br>
     <a href="/UI_pages/signup.html">signup</a><br>
     <a href="/UI_pages/homepage.html">Home Page</a><br>
-    <a href="/UI_pages/productpage.html">Product Page</a>
+    <a href="/UI_pages/productpage.html">Product Page</a><br>
+    <a href="/UI_pages/wishlistpage.html">Wishlist page</a>
 </body>
 </html>
