--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="/UI_pages/signup.html">signup</a><br>
     <a href="/UI_pages/homepage.html">Home Page</a><br>
     <a href="/UI_pages/productpage.html">Product Page</a><br>
-    <a href="/UI_pages/wishlistpage.html">Wishlist page</a>
+    <a href="/UI_pages/wishlistpage.html">Wishlist page</a><br>
+    <a href="/UI_pages/cartMgmtPage.html">Cart Mgmt Page</a>
 </body>
 </html>
