--- a/UI_pages/cartMgmtPage.html
+++ b/UI_pages/cartMgmtPage.html
@@ -15,17 +15,17 @@
             <div class="navbar-left-items">
                 <a class="navbar-menu-icon" href="#"><i class="fas fa-bars"></i></a>
                 <img src="/Assets/AyuMallHZ0.png" class="navbar-ayumall-logo" alt="AyuMall logo">
-                <a class="nav-link" href="#">Home</a>
-                <a class="nav-link" href="#">Shop Now</a>
+                <a class="nav-link" href="homepage.html">Home</a>
+                <a class="nav-link" href="productpage.html">Shop Now</a>
             </div>
             <div class="navbar-right-items">
                 <div class="navbar-search-container">
                     <i class="fas fa-search"></i>
                     <input type="text" class="navbar-search" placeholder="Search here">
                 </div>
-                <a class="nav-icon-link nav-icon-link-login" href="#"><i class="fas fa-user-circle"></i><span class="nav-icon-name">Login</span></a>
-                <a class="nav-icon-link" href="#"><i class="fas fa-heart"></i><span class="nav-icon-name">WishList</span></a>
-                <a  class="nav-icon-link" href="#"><i class="fas fa-shopping-cart"></i><span class="nav-icon-name">Cart</span></a>
+                <a class="nav-icon-link nav-icon-link-login" href="#"><i class="fas fa-user-circle"></i><span class="nav-icon-name">Logout</span></a>
+                <a class="nav-icon-link" href="wishlistpage.html"><i class="fas fa-heart"></i><span class="nav-icon-name">WishList</span></a>
+                <a  class="nav-icon-link" href="cartMgmtPage.html"><i class="fas fa-shopping-cart"></i><span class="nav-icon-name">Cart</span></a>
             </div>
         </div>
 
