refactor added link
Added links to mobile nav

--- a/UI_pages/cartMgmtPage.html
+++ b/UI_pages/cartMgmtPage.html
@@ -35,9 +35,9 @@
                 <div class="mobile-nav-login"><i class="fas fa-user-circle"></i></div>
             </div>
             <div class="mobile-nav-menu-container">
-                <div class="mobile-nav-menu"><a href="#">Home</a></div>
-                <div class="mobile-nav-menu"><a href="#">Shop Now</a></div>
-                <div class="mobile-nav-menu"><a href="#">Orders</a></div>
+                <div class="mobile-nav-menu"><a href="homepage.html">Home</a></div>
+                <div class="mobile-nav-menu"><a href="productpage.html">Shop Now</a></div>
+                <div class="mobile-nav-menu"><a href="cartMgmtPage.html">Orders</a></div>
                 <div class="mobile-nav-menu"><a href="#">Best Sellers</a></div>
                 <div class="mobile-nav-menu"><a href="#">Trending</a></div>
             </div>
